--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,12 @@ services:
   unmanic-dev:
     container_name: unmanic-plugin-dev
     image: ghcr.io/unmanic/unmanic:staging
+    command: ["unmanic", "--port", "7888"]
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=UTC
+    ports:
+      - "7888:7888"
     volumes:
       - ./build:/config/.unmanic
