--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,14 @@ services:
   unmanic-dev:
     container_name: unmanic-plugin-dev
     image: ghcr.io/unmanic/unmanic:staging
+    user: ${PUID:-1000}:${PGID:-1000}
+    userns_mode: keep-id
     command: ["unmanic", "--port", "7888"]
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=UTC
+      - PUID=${PUID:-1000}
+      - PGID=${PGID:-1000}
+      - TZ=${TZ:-UTC}
     ports:
       - "7888:7888"
     volumes:
-      - ./build:/config/.unmanic
+      - ./build:/config/.unmanic:z
