--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,14 @@
-version: "3.9"
-
 services:
   unmanic-dev:
     container_name: unmanic-plugin-dev
     image: ghcr.io/unmanic/unmanic:staging
-    user: ${PUID:-1000}:${PGID:-1000}
     userns_mode: keep-id
-    command: ["unmanic", "--port", "7888"]
+    command: ['/usr/bin/unmanic', '--port', '7888']
     environment:
       - PUID=${PUID:-1000}
       - PGID=${PGID:-1000}
       - TZ=${TZ:-Etc/UTC}
     ports:
-      - "7888:7888"
+      - '7888:7888'
     volumes:
       - ./build:/config/.unmanic:z
